[project]
name = "blaise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tom Flannaghan", email = "tom@flannaghan.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "autodoc>=0.5.0",
    "black>=25.12.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "sphinx>=6",
    "sphinx-rtd-theme>=3",
]
