[project]
name = "blaise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tom Flannaghan", email = "tom@flannaghan.com" }
]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.36.1",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "autodoc>=0.5.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "sphinx>=6",
    "sphinx-rtd-theme>=3",
    "ty>=0.0.8",
]
