[project]
name = "blaise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tom Flannaghan", email = "tom@flannaghan.com" }
]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.36.1",
    "pygtrie>=2.5.0",
]

[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "rust/Cargo.toml"}, {file = "**/*.rs"}]

[tool.maturin]
module-name = "blaise._blaise"

[dependency-groups]
dev = [
    "autodoc>=0.5.0",
    "maturin>=1.11.5",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "sphinx>=6",
    "sphinx-rtd-theme>=3",
    "ty>=0.0.8",
]
